--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -1,92 +1,90 @@
 #post-18 {
-    margin: 0;
+  margin: 0;
 }
 
 .entry-header {
-    display: flex;
-    justify-content: center;
-    background: $orange;
-    height: 118px;
-    width: $mobile_width;
-    margin: auto;
-    @include page-header;
+  display: flex;
+  justify-content: center;
+  background: $orange;
+  height: 118px;
+  width: $mobile_width;
+  margin: auto;
+  @include page-header;
 }
 
 .entry-title {
-    margin: auto;
+  margin: auto;
 }
 
 .entry-content {
-    margin: 0;
+  margin: 0;
 }
 
 .join-us-section {
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    max-width: $mobile-width;
-    background-image: url("../../assets/images/149-46.jpg");
-    background-repeat: no-repeat;
-    min-height: 250px;
-    max-height: 750px;
-    padding-bottom: 21px;
-    background-position: 60%;    
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  max-width: $mobile-width;
+  background-image: url("../../assets/images/149-46.jpg");
+  background-repeat: no-repeat;
+  min-height: 250px;
+  max-height: 750px;
+  padding-bottom: 21px;
+  background-position: 60%;
 }
 
 .rectangle {
-    height: 208px;
-    max-width: $mobile-width;
-    box-sizing: border-box;
-    max-width: $mobile-width;
-    flex-direction: column;
-    text-decoration: none;
-    background-color: rgba(255,255,255,0.8); 
-    border: 4px solid rgba(255,255,255,0.0);
-    &:hover {
-        border: 4px solid $black;
-    }
+  height: 208px;
+  max-width: $mobile-width;
+  box-sizing: border-box;
+  max-width: $mobile-width;
+  flex-direction: column;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 4px solid rgba(255, 255, 255, 0.0);
+  &:hover {
+    border: 4px solid $black;
+  }
 }
 
-.new-member, .membership-renewal, .volunteer, .rectangle {
+.new-member,
+.membership-renewal,
+.volunteer,
+.rectangle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-member,
+.membership-renewal,
+.volunteer {
+  margin-top: 21px;
+  h2 {
+    font-family: $font__header;
+    font-size: $font_m-h2;
+    color: $black;
+    text-decoration: none;
+    width: 163px;
+    height: 58px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 29px;
     display: flex;
     justify-content: center;
     align-items: center;
-} 
-
-.new-member, .membership-renewal, .volunteer {
-    margin-top: 21px; 
-        h2 {
-            font-family: $font__header;
-            font-size: $font_m-h2;
-            color: $black;
-            text-decoration: none;
-            width: 163px;
-            height: 58px;
-            margin: 0 auto;
-            text-align: center;
-            line-height: 29px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }  
+  }
 }
-
 
 .rectangle p {
-        display: none;
+  display: none;
 }
-
-
 
 @media all and (min-width: $desktop-view) {
-
- 
-.entry-header {
+  .entry-header {
     width: $d_width;
-}
-
-
-.join-us-section {
+  }
+  .join-us-section {
     display: flex;
     padding-bottom: initial;
     margin: 0 auto;
@@ -97,47 +95,42 @@
     max-width: none;
     flex-direction: row;
     background-size: 100%;
-    
-}
-
-.rectangle {
+  }
+  .rectangle {
     margin-top: initial;
-    
     height: 356px;
     box-sizing: border-box;
     width: 300px;
-    background-color: rgba(255,255,255,0.8); 
-    border: 4px solid rgba(255,255,255,0.0);
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 4px solid rgba(255, 255, 255, 0.0);
     &:hover {
-        border: 4px solid $black;
+      border: 4px solid $black;
     }
-}
-
-.new-member, .membership-renewal, .volunteer {
+  }
+  .new-member,
+  .membership-renewal,
+  .volunteer {
     h2 {
-        font-family: $font__header;
-        font-size: $font_d-body;
-        width: 163px;
-        height: 58px;
-        margin: 38px auto 11px auto;
-        text-align: center;
-        padding-bottom: 11px;
-        line-height: 29px;
-        
-    }  
-    p {
-        font-family: $font__body;
-        font-size: $font_d-sub-body;
-        color: black;
-        width: 163px;
-        margin: auto;
-        margin-top: 11px;
-        line-height: 22px;
+      font-family: $font__header;
+      font-size: $font_d-body;
+      width: 163px;
+      height: 58px;
+      margin: 38px auto 11px auto;
+      text-align: center;
+      padding-bottom: 11px;
+      line-height: 29px;
     }
-}
-
-.rectangle p {
+    p {
+      font-family: $font__body;
+      font-size: $font_d-sub-body;
+      color: black;
+      width: 163px;
+      margin: auto;
+      margin-top: 11px;
+      line-height: 22px;
+    }
+  }
+  .rectangle p {
     display: initial;
-}
-
+  }
 }
