--- a/themes/sgsc/sass/_events.scss
+++ b/themes/sgsc/sass/_events.scss
@@ -13,14 +13,14 @@
 		position: absolute;
     right: 0;
 		top: 0;
-    width: 5.2rem;
+    width: 5.4rem;
     background: $orange;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 		margin: 0;
 		text-align: center;
-    font-weight: lighter;
 		hyphens: auto;
+		font-size: 1.2rem;
 	}
 	
 	.tribe-events-event-image {
